UN-5048 fix wrapping issue with tyce issues
JS + CSS fix

git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@1738 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css/tyce-nonresponsive.css
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css/tyce-nonresponsive.css
@@ -1964,7 +1964,7 @@
   border: 1px solid #f2f2f2;
 }
 /* line 705, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/_tyce-steps.scss */
-.tyce-issues .issue:nth-child(3n+1) {
+.tyce-issues .issue.row-start {
   margin-left: 0;
   clear: left;
 }
